k8s/apps/portainer/ingress.yaml
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer-ingress
  namespace: portainer
spec:
  rules:
  - host: portainer.dev01.internal.minipig.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9000
  tls:
  - hosts:
    - portainer.dev01.internal.minipig.org
    secretName: portainer-cert
